// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionCardView avoid re-renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignSelf": "stretch",
              "borderRadius": 0,
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="contain"
        source={
          Object {
            "cache": "web",
            "uri": "",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`CollectionCardView avoid re-renders correctly 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignSelf": "stretch",
              "borderRadius": 0,
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="contain"
        source={
          Object {
            "cache": "web",
            "uri": "",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`CollectionCardView renders correctly with default styles 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignSelf": "stretch",
              "borderRadius": 0,
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="contain"
        source={
          Object {
            "cache": "web",
            "uri": "",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`renders with the correct aspect ratio image renders correctly 1/1 aspect ratio 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignSelf": "stretch",
              "borderRadius": 0,
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="contain"
        source={
          Object {
            "cache": "web",
            "uri": "",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`renders with the correct aspect ratio image renders correctly 2/3 aspect ratio 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignSelf": "stretch",
              "borderRadius": 0,
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="contain"
        source={
          Object {
            "cache": "web",
            "uri": "",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`renders with the correct aspect ratio image renders correctly 16/9 aspect ratio 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignSelf": "stretch",
              "borderRadius": 0,
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="contain"
        source={
          Object {
            "cache": "web",
            "uri": "",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`renders with the correct aspect ratio image renders empty image when no valid image is passed 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`renders with the correct aspect ratio image renders fallback image for an invalid aspect ratio 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Collection Card View"
    accessible={true}
    focusable={true}
    hasTVPreferredFocus={false}
    isTVSelectable={true}
    style={
      Array [
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "elevation": 2,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginTop": 15,
          "shadowColor": "#333333",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
          "width": 375,
        },
        undefined,
        Object {
          "backgroundColor": "#C90619",
        },
        undefined,
      ]
    }
    testID="collectionCardView"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignSelf": "stretch",
              "borderRadius": 0,
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="contain"
        source={
          Object {
            "cache": "web",
            "uri": "",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <BVLinearGradient
      angle={45}
      angleCenter={
        Object {
          "x": 0.5,
          "y": 0.5,
        }
      }
      colors={
        Array [
          0,
          1712328720,
          3423604752,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useAngle={true}
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
